Issue #1: Added NavHeader block.

--- a/src/template-header.html
+++ b/src/template-header.html
@@ -28,7 +28,8 @@
       divNode.style.padding = '5px 10px';
       divNode.style.fontFamily = 'sans-serif';
       divNode.style.textAlign = 'center';
-      divNode.innerText = 'Scrips has not been loaded. Probaly, the page is served under the dev mode.';
+      divNode.innerText =
+        'Scrips has not been loaded. Probaly, the page is served under the dev mode.';
       body.prepend(divNode);
     });
   }
