--- a/src/template-dev.html
+++ b/src/template-dev.html
@@ -1,17 +1,7 @@
 <!--
-@desc Custom styles and code to adjust page
-@changed 2024.10.23, 19:13
+@desc Dev code
+@changed 2024.10.24, 17:19
 -->
-
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-/>
-<link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-/>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
 <script type="text/javascript">
   function devScriptError(arg) {
