--- a/src/template-dev.html
+++ b/src/template-dev.html
@@ -20,7 +20,7 @@
       divNode.style.fontFamily = 'sans-serif';
       divNode.style.textAlign = 'center';
       divNode.innerText =
-        'Scrips has not been loaded. The page is probably being maintained in development mode.';
+        'Scripts has not been loaded. The page is probably being maintained in development mode.';
       body.prepend(divNode);
     });
   }
